Fri Sep  3 06:14:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (chfunc): restore errno from SystemCallError and
	  propagate proper exception to the parent.  [ruby-dev:41965]

Thu Sep  2 22:10:38 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_file_p): Pathname#file?
	  translated from pathname.rb.

Thu Sep  2 09:12:02 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): don't forget to free
	  memory.

Thu Sep  2 09:01:13 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): unicodize.

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): convert arguments of
	  CreateChild() from ACP to WideChar.

Thu Sep  2 06:53:43 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_directory_p): Pathname#directory?
	  translated from pathname.rb.

Wed Sep  1 22:03:41 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_grpowned_p): Pathname#grpowned?
	  translated from pathname.rb.

Wed Sep  1 17:39:02 2010  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.7.1 r5835.
	* test/minitest/*.rb: ditto.

Wed Sep  1 16:50:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): optimized. don't create hash objects
	  when given pattern is ASCII only.

	* string.c (tr_find): ditto.

Wed Sep  1 14:35:29 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_rotate_m): fix typo of rdoc.
	  patched by Andrei Kulakov [ruby-core:31975]

Wed Sep  1 14:33:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_zip): fix typo of rdoc.
	  patched by Andrei Kulakov [ruby-core:31974]

Wed Sep  1 12:56:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_suppress_tracing): restore the state and invoke
	  the func with normal state.  a patch from Satoshi Shiba <shiba
	  AT rvm.jp> at [ruby-dev:42162].  [ruby-core:31783]

Tue Aug 31 21:10:23 2010  Tanaka Akira  <akr@fsij.org>
