@@ -1,3 +1,8 @@
+Fri Sep  3 06:16:07 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_pipe_p): Pathname#pipe?
+	  translated from pathname.rb.
+
 Fri Sep  3 06:14:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/pty/pty.c (chfunc): restore errno from SystemCallError and
